added hover states for text

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
 
       <section class="card__content">
-        <img src="./images/image-equilibrium.jpg" alt="" class="width-100 margin-bottom-1rem">
-        <h1 class="color-white margin-bottom-1rem">Equilibrium #3429</h1>
+        <a href="#" class="card__image margin-bottom-1rem"></a>
+        <h1 class="color-white margin-bottom-1rem cyan-hover-state">Equilibrium #3429</h1>
         <p class="line-height-1-6 margin-bottom-1rem">Our Equilibrium collection promotes balance and calm.</p>
         <div class="flex-between margin-bottom-1rem">
           <p class="card__price">0.041 ETH</p>
@@ -33,12 +33,18 @@
       </section>
 
 
+
+
+
       <hr class="margin-bottom-1rem">
 
 
+
+
+      
       <section class="card__attribution">
         <img src="./images/image-avatar.png" alt="" width="30px" class="avatar-border">
-        <p class="margin-left-1rem">Creation of <span class="color-white">Jules Wyvern</span></p>
+        <p class="margin-left-1rem">Creation of <span class="color-white cyan-hover-state">Jules Wyvern</span></p>
       </section>
 
 
