added hover states for text

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 
 
 
-      
+
       <section class="card__attribution">
-        <img src="./images/image-avatar.png" alt="" width="30px" class="avatar-border">
+        <img src="./images/image-avatar.png" alt="" width="30" class="avatar-border">
         <p class="margin-left-1rem">Creation of <span class="color-white cyan-hover-state">Jules Wyvern</span></p>
       </section>
 
@@ -53,9 +53,9 @@
       
     </article>
   </main>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/gian-ancheta" target="_blank">Gian Ancheta</a>.
-  </div>
+  <footer class="attribution">
+    <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="https://github.com/gian-ancheta" target="_blank">Gian Ancheta</a>.</p>
+    </footer>
 </body>
 </html>
