fixed accessibility issues with anchor tags

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
       <section class="card__content">
-        <a href="#" class="card__image margin-bottom-1rem"></a>
+        <a href="#" class="card__image margin-bottom-1rem"><span class="display-none">View image</span></a>
         <h1 class="color-white margin-bottom-1rem cyan-hover-state">Equilibrium #3429</h1>
         <p class="line-height-1-6 margin-bottom-1rem">Our Equilibrium collection promotes balance and calm.</p>
         <div class="flex-between margin-bottom-1rem">
